2009-11-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/config.py:
	  Add to docstring.

2009-11-10  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/worker/checks/audio.py:
	Fix a pair of stupid copy-paste programming errors that make the
	soundcard worker check to fail from time to time.

2009-11-09  Andoni Morales Alastruey <amorales@flumotion.com>

	reviewed by: Julien Le Gof

	* flumotion/common/eventcalendar.py:
	Parse properly timezones in 'TZID' with a local path 
	prepended (e.g.:/mozilla.org/20070129_1/Europe/Madrid)
	* flumotion/test/test_icalbouncer.py:
	Added test for timezones with a local path in 'TZID'
	Closes #1377

2009-11-06 Andoni Morales Alastruey <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/test/test_common_managerspawner.py:
	Disable manager spawner test as they fail in 'fc5_64-quick-t2.0.1'

2009-11-06 Andoni Morales Alastruey <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/common/managerspawner.py:
	Stop properly managers started by the LocalManagerSpawner
	* flumotion/test/Makefile.am:
	* flumotion/test/test_common_managerspawner.py:
	* flumotion/test/test_common_managerspawner.py (added):
	Add a test suite for the LocalManagerSpawner
	Close #1380

2009-11-06  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Julien

	* flumotion/admin/assistant/models.py:
	* flumotion/component/producers/firewire/wizard_gtk.py:
	* flumotion/admin/assistant/save.py:
	Delegate the comparisons to the component models. This way we can
	distinguish between two firewire producers with different guid.
	Fixes #1376

2009-11-05  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/extern/log/log.py:
	Move the Unicode encoding logic down to the exception
	handler. Has the same effect as r8216, but avoids encoding
	when not necessary, which for frequently-called code like logging is
	important.
	Tests showed that r8216 amounted to a 10% slowdown of the logging, this